samples/_failures_safe/1761226716_9bd3f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b842821.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_2b842821.c:183:28: error: expected ‘)’ at end of input
  183 |     if (state < STATE_START
      |        ~                   ^
      |                            )
./samples/SAFE/__tmp_2b842821.c:183:5: error: expected declaration or statement at end of input
  183 |     if (state < STATE_START
      |     ^~
